@@ -2,14 +2,17 @@
 
 function startServices {
 
-    JAVA_OPTS=-Xms32m -Xmx64m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom
+#    JAVA_OPTS="-Xms32m -Xmx64m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom"
+    JAVA_OPTS="-server -Xms48m -Xmx48m -XX:MaxMetaspaceSize=64m -Xmn8m -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+UseCMSInitiatingOccupancyOnly -XX:+ScavengeBeforeFullGC -XX:+CMSScavengeBeforeRemark -Djava.security.egd=file:/dev/urandom"
 
-    /usr/bin/java $JAVA_OPTS -jar /opt/api/eureka-server.jar &
-    /usr/bin/java $JAVA_OPTS -jar /opt/api/gateway.jar &
-    /usr/bin/java $JAVA_OPTS -jar /opt/api/core-server.jar &
-    /usr/bin/java $JAVA_OPTS -jar /opt/api/higea-especialidad-microservice.jar &
-    /usr/bin/java $JAVA_OPTS -jar /opt/api/higea-profesional-microservice.jar &
-    /usr/bin/java $JAVA_OPTS -jar /opt/api/higea-turnos-microservice.jar &
+    /usr/bin/java $JAVA_OPTS -jar /opt/api/eureka-server.jar < /dev/null &> /dev/null &
+    /usr/bin/java $JAVA_OPTS -jar /opt/api/gateway.jar < /dev/null &> /dev/null &
+    /usr/bin/java $JAVA_OPTS -jar /opt/api/higea-especialidad-microservice.jar < /dev/null &> /dev/null &
+    /usr/bin/java $JAVA_OPTS -jar /opt/api/higea-profesional-microservice.jar < /dev/null &> /dev/null &
+    /usr/bin/java $JAVA_OPTS -jar /opt/api/higea-turnos-microservice.jar < /dev/null &> /dev/null &
+
+    JAVA_OPTS="-server -Xms64m -Xmx64m -XX:MaxMetaspaceSize=96m -Xmn32m -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+UseCMSInitiatingOccupancyOnly -XX:+ScavengeBeforeFullGC -XX:+CMSScavengeBeforeRemark -Djava.security.egd=file:/dev/urandom"
+    /usr/bin/java $JAVA_OPTS -jar /opt/api/core-server.jar < /dev/null &> /dev/null &
 
 }
 
